...
    var body: some View {
        NavigationStack {
            ZStack {
                backgroundGradient
                viewContent
                    .alert(isPresented: $viewModel.showAlert) {
                        Alert(
                            title: Text(AppConstants.AlertConstants.alert),
                            message: Text(viewModel.errorMessage),
                            dismissButton: .default(Text(AppConstants.AlertConstants.ok))
                        )
                    }
                    .padding()
...
            }
            .buttonStyle(PlainButtonStyle())
            .listRowBackground(Color.clear)
            .accessibilityLabel("Suggestion for \(location.name)")
        }
        .listStyle(.plain)
        .accessibilityIdentifier("searchSuggestionList")
    }
    
    private var currentWeatherView: some View {
        VStack(spacing: 4) {
            locationDetails
            weatherDetails
...
