//
//  NagWeatherUITests.swift
//  NagWeatherUITests
//
//  Created by Kartik Gupta on 28/11/24.
//

import XCTest

final class NagWeatherUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testWeatherUI() throws {
        
        
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()
        let searchBarElement = app.searchFields.element
        searchBarElement.tap()
        searchBarElement.typeText("Lon")

        app.collectionViews["searchSuggestionList"].cells.element(boundBy: 0).tap()

        let label = app.staticTexts["London"]
        let exists = NSPredicate(format: "exists == 1")

        expectation(for: exists, evaluatedWith: label, handler: nil)
        waitForExpectations(timeout: 5, handler: nil)
        
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        XCTAssertTrue(app.staticTexts["London"].exists)

    }

    func testAlertUI() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()
        let searchBarElement = app.searchFields.element
        searchBarElement.tap()
        searchBarElement.typeText("Lo")
        
        let label = app.staticTexts["Alert"]
        let exists = NSPredicate(format: "exists == 1")

        expectation(for: exists, evaluatedWith: label, handler: nil)
        waitForExpectations(timeout: 5, handler: nil)
        
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        XCTAssertTrue(app.staticTexts["Alert"].exists)

    }
    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
